web-front/rules/examples/fixtures/ci-scan-project/src/views/pass/BaseOnly.vue
<template>
  <BasePage>
    <BaseTable :data="[]" />
  </BasePage>
</template>

<script setup lang="ts"></script>
