web-front/rules/examples/fixtures/ci-scan-project/src/views/fail/PascalCaseElButton.vue
<template>
  <ElButton type="primary" />
</template>

<script setup lang="ts"></script>
